samples/_failures_safe/1761200063_52cc02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fee7030.c: In function ‘main’:
./samples/SAFE/__tmp_3fee7030.c:156:19: error: missing terminating " character
  156 |         if (scanf("%d %d
      |                   ^~~~~~
./samples/SAFE/__tmp_3fee7030.c:156:9: error: expected expression at end of input
  156 |         if (scanf("%d %d
      |         ^~
./samples/SAFE/__tmp_3fee7030.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fee7030.c:156:9: error: expected declaration or statement at end of input
